<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">





    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton

            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:maxWidth="40dp"
            android:maxHeight="40dp"
            android:src="@drawable/setting_leftshift"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="친구"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:text="자동 친구 추가"

                    app:layout_constraintBottom_toTopOf="@+id/auto_friend_add_Text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track_selector"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView7" />


                <TextView
                    android:id="@+id/auto_friend_add_Text"
                    style="@style/MORE_TEXT_STYLE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/auto_friend_add"
                    app:layout_constraintEnd_toEndOf="@+id/switch1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                style="@style/LINEAR_STYLE"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="친구 목록 새로고침" />

                <TextView
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:id="@+id/Refresh_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/MORE_TEXT_STYLE"
                    android:text="4월 20일 오후 7:56분"
                   />

                <ImageButton
                    android:padding="10dp"
                    android:background="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="30dp"
                    android:maxWidth="30dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/refresh"
                    />


            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:paddingTop="10dp"
                android:paddingBottom="10dp"
              >

                <TextView
                    android:id="@+id/friend_recommend_permit_TEXT"
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:text="친구 추천 허용"

                    app:layout_constraintBottom_toTopOf="@+id/friend_recommend_permit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track_selector"
                    app:layout_constraintBottom_toBottomOf="@+id/friend_recommend_permit_TEXT"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/friend_recommend_permit_TEXT" />


                <TextView
                    android:id="@+id/friend_recommend_permit"
                    style="@style/MORE_TEXT_STYLE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/friend_recommend_permit"
                    app:layout_constraintEnd_toEndOf="@+id/switch2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/friend_recommend_permit_TEXT" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/friend_name_sync_TEXT"
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:text="친구 이름 동기화"

                    app:layout_constraintBottom_toTopOf="@+id/friend_name_sync"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track_selector"
                    app:layout_constraintBottom_toBottomOf="@+id/friend_name_sync_TEXT"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/friend_name_sync_TEXT" />


                <TextView
                    android:id="@+id/friend_name_sync"
                    style="@style/MORE_TEXT_STYLE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/friend_name_sync"
                    app:layout_constraintEnd_toEndOf="@+id/switch3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/friend_name_sync_TEXT"
                    app:layout_constraintTop_toBottomOf="@+id/friend_name_sync_TEXT" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                style="@style/LINEAR_STYLE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="친구관리"
                    style="@style/MORE_TEXT_STYLE2" />
            </LinearLayout>

            <LinearLayout
                style="@style/LINEAR_STYLE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="숨김친구 관리" />
            </LinearLayout>

            <LinearLayout
                style="@style/LINEAR_STYLE"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="차단친구 관리" />
            </LinearLayout>
            <LinearLayout
                style="@style/LINEAR_STYLE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    style="@style/MORE_TEXT_STYLE2"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:text="친구 보기 설정" />
            </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/show_birthday_friend_TEXT"
                        style="@style/TEXT_STYLE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="16dp"
                        android:text="생일인 친구 보기"

                        app:layout_constraintBottom_toTopOf="@+id/show_birthday_friend"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:thumb="@drawable/switch_thumb"
                        android:track="@drawable/switch_track_selector"
                        app:layout_constraintBottom_toBottomOf="@+id/show_birthday_friend_TEXT"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/show_birthday_friend_TEXT" />


                    <TextView
                        android:id="@+id/show_birthday_friend"
                        style="@style/MORE_TEXT_STYLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/show_birthday_f"
                        app:layout_constraintEnd_toEndOf="@+id/switch4"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/show_birthday_friend_TEXT"
                        app:layout_constraintTop_toBottomOf="@+id/show_birthday_friend_TEXT" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/show_update_friend_TEXT"
                    style="@style/TEXT_STYLE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="16dp"
                    android:text="업데이트한 친구 보기"

                    app:layout_constraintBottom_toTopOf="@+id/show_update_friend"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/switch5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track_selector"
                    app:layout_constraintBottom_toBottomOf="@+id/show_update_friend_TEXT"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/show_update_friend_TEXT" />


                <TextView
                    android:id="@+id/show_update_friend"
                    style="@style/MORE_TEXT_STYLE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/show_update_f"
                    app:layout_constraintEnd_toEndOf="@+id/switch5"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/show_update_friend_TEXT"
                    app:layout_constraintTop_toBottomOf="@+id/show_update_friend_TEXT" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <TableLayout

        android:background="#111113"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:stretchColumns="*">
        <TableRow
            android:padding="10dp">
            <ImageView
                style="@style/Tab_button_Theme"
                android:src="@drawable/person"/>
            <ImageView
                style="@style/Tab_button_Theme"
                android:src="@drawable/chatting"/>
            <ImageView
                style="@style/Tab_button_Theme"
                android:src="@drawable/news"/>
            <ImageView
                style="@style/Tab_button_Theme"
                android:src="@drawable/shopping"/>
            <ImageView

                style="@style/Tab_button_Theme"
                android:src="@drawable/moreview"/>

        </TableRow>

    </TableLayout>



</LinearLayout>